# private-ai-companion

./: .env.example  .gitattributes  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  GSD.md  LICENSE.md  PROMPT-CODEX.md  README.md  ROADMAP.md  SDD.md  SECURITY.md  Start.bat  pyproject.toml
assets/: README.md
configs/: README.md  avatar.default.toml  desktop.default.toml  memory.default.toml  observability.default.toml  persona.default.toml  privacy.default.toml  providers.default.toml  skills.default.toml  speech.default.toml
docs/ai/: ai-review-checklist.md  codex-workflow.md  development-methodology.md  phase-gates.md  prompt-engineering.md
docs/architecture/: c4-components.md  c4-containers.md  c4-context.md  data-flow.md  event-driven-core.md  module-boundaries.md  overview.md  ports-and-adapters.md  principles.md  project-structure.md
docs/configuration/: app-config.md  avatar-config.md  desktop-config.md  memory-config.md  observability-config.md  persona-config.md  privacy-config.md  providers-config.md  skills-config.md  speech-config.md
docs/implementation/: phase-00-repository-and-documentation.md  phase-01-foundation.md  phase-02-core-runtime.md  phase-03-text-interaction.md  phase-04-persona-and-prompt-builder.md  phase-05-llm-router.md  phase-06-memory-system.md  phase-07-tts-and-speech-queue.md  phase-08-stt-and-voice-input.md  phase-09-avatar-vtube-studio.md  phase-10-vision-and-screen-context.md  phase-11-safe-desktop-actions.md  phase-12-skills-system.md  phase-13-ui-dashboard-and-tray.md  (+3 more)
scripts/: README.md  final-audit.ps1  release-check.ps1
(+215 files in other folders)
